# LightWeightChartsMCP

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  pyproject.toml  run.sh  server.py
.github/workflows/: test.yml
core/: build_db.py  caches.py  config.py  db.py  embeddings.py  hot_cache.py  validator.py
data/: lwc_entries.json
formatters/: entry.py  errors.py
pipeline/: merge_and_index.py  scrape_lwc.py
templates/: templates.py
tests/: test_tools.py
tools/: codegen.py  context.py  lookup.py  search.py  validation.py
tools/resources/: stats.py
