[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "tools*", "formatters*", "templates*", "pipeline*"]

[project]
name = "lwc-mcp"
version = "1.0.0"
description = "TradingView Lightweight Charts MCP server - 6 tools for docs lookup, JS/TS code validation, and template generation"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "TheFractalyst" }]
keywords = ["mcp", "lightweight-charts", "tradingview", "charts", "javascript", "typescript"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "fastmcp>=3.4.0,<4.0.0",
    "chromadb>=0.5.0,<0.6.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "loguru>=0.7.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "rapidfuzz>=3.0.0,<4.0.0",
    "xxhash>=3.0.0,<4.0.0",
    "starlette>=0.36.0,<1.0.0",
]

[project.optional-dependencies]
pipeline = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tqdm>=4.66.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
