[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lwcmcp"
version = "1.1.0"
description = "TradingView Lightweight Charts MCP server - 6 tools for docs lookup, JS/TS code validation, and template generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Fractalyst", email = "contact@fractalyst.dev" }]
keywords = ["mcp", "lightweight-charts", "tradingview", "charts", "javascript", "typescript"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastmcp>=3.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "rapidfuzz>=3.0.0",
    "xxhash>=3.0.0",
    "starlette>=0.36.0",
]

[project.optional-dependencies]
pipeline = [
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tqdm>=4.66.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://fractalyst.dev"
Repository = "https://github.com/TheFractalyst/LightWeightChartsMCP"
Issues = "https://github.com/TheFractalyst/LightWeightChartsMCP/issues"

[project.scripts]
lwcmcp = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "tools*", "formatters*", "templates*", "pipeline*", "data*"]
namespaces = false

[tool.setuptools.package-data]
"data" = ["*.json"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
